[gd_scene load_steps=18 format=2]

[ext_resource path="res://gui/MinimalPixel_v2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/screens/main_menu/assets/GUI.png" type="Texture" id=2]
[ext_resource path="res://gui/screens/scoreboard/assets/GUI.png" type="Texture" id=3]
[ext_resource path="res://gui/screens/scoreboard/scripts/Scoreboard.gd" type="Script" id=4]
[ext_resource path="res://gui/screens/scoreboard/assets/6.png" type="Texture" id=5]
[ext_resource path="res://gui/screens/scoreboard/assets/5.png" type="Texture" id=6]
[ext_resource path="res://gui/screens/scoreboard/assets/3.png" type="Texture" id=7]
[ext_resource path="res://gui/screens/scoreboard/assets/1.png" type="Texture" id=8]
[ext_resource path="res://music/Pixel 11.wav" type="AudioStream" id=9]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 1.77475, 33.7305, 44.4652, 44.4652 )

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 48.749, 96.8577, 30.4574, 30.4574 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.341176, 0.192157, 0.192157, 0.266667 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 2 )
region_rect = Rect2( 145, 113, 46, 14 )
modulate_color = Color( 1, 0.976471, 0.364706, 1 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 3 )
region_rect = Rect2( 144.769, 80.9158, 46.5214, 14.2649 )

[node name="Scoreboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 210.0
margin_top = 40.0
margin_right = 1710.0
margin_bottom = 1040.0
rect_min_size = Vector2( 1500, 1000 )
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -570.0
margin_top = -370.0
margin_right = 570.0
margin_bottom = 327.0
rect_min_size = Vector2( 700, 600 )
custom_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 1140.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "SCOREBOARD"
align = 1
valign = 1

[node name="ColumnsTitle" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_left = 100.0
margin_top = 78.0
margin_right = 1039.0
margin_bottom = 128.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30
alignment = 1

[node name="Index" type="Label" parent="CenterContainer/Panel/VBoxContainer/ColumnsTitle"]
margin_top = 9.0
margin_right = 69.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "POS"

[node name="Username" type="Label" parent="CenterContainer/Panel/VBoxContainer/ColumnsTitle"]
margin_left = 99.0
margin_top = 9.0
margin_right = 300.0
margin_bottom = 41.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 2 )
text = "USERNAME"

[node name="SelectedCharacter" type="Label" parent="CenterContainer/Panel/VBoxContainer/ColumnsTitle"]
margin_left = 330.0
margin_top = 9.0
margin_right = 526.0
margin_bottom = 41.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "CHARACTER"

[node name="MobsKilled" type="Label" parent="CenterContainer/Panel/VBoxContainer/ColumnsTitle"]
margin_left = 556.0
margin_top = 9.0
margin_right = 799.0
margin_bottom = 41.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "MOBS KILLED"

[node name="Score" type="Label" parent="CenterContainer/Panel/VBoxContainer/ColumnsTitle"]
margin_left = 829.0
margin_top = 9.0
margin_right = 939.0
margin_bottom = 41.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "SCORE"

[node name="Panel" type="Panel" parent="CenterContainer/Panel/VBoxContainer"]
margin_left = 20.0
margin_top = 158.0
margin_right = 1120.0
margin_bottom = 708.0
rect_min_size = Vector2( 1100, 550 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -212.0
margin_right = 450.0
margin_bottom = 212.0
custom_constants/separation = 90

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer"]
margin_right = 900.0
margin_bottom = 400.0
rect_min_size = Vector2( 900, 400 )
custom_styles/bg = SubResource( 13 )

[node name="HighScores" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer/ScrollContainer"]
margin_right = 900.0
size_flags_horizontal = 7
size_flags_vertical = 2

[node name="Line" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HighScores"]
visible = false
margin_right = 900.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 7
size_flags_vertical = 3
custom_constants/separation = 100

[node name="Index" type="Label" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HighScores/Line"]
margin_right = 84.0
margin_bottom = 50.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Username" type="Label" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HighScores/Line"]
margin_left = 184.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 50 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "ANDREI"
align = 1
valign = 1
autowrap = true
clip_text = true
max_lines_visible = 1

[node name="SelectedChar" type="Label" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HighScores/Line"]
margin_left = 404.0
margin_right = 531.0
margin_bottom = 50.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "FIREMAN"
align = 1
valign = 1

[node name="MobsKilled" type="Label" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HighScores/Line"]
margin_left = 631.0
margin_right = 715.0
margin_bottom = 50.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "100"
align = 1
valign = 1

[node name="Score" type="Label" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HighScores/Line"]
margin_left = 815.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "1200"
align = 1
valign = 1

[node name="Return" type="Button" parent="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer"]
modulate = Color( 1, 0.176471, 0.176471, 1 )
margin_left = 400.0
margin_top = 490.0
margin_right = 500.0
margin_bottom = 540.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 12 )
text = "BACK"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 8 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Layer2"]
position = Vector2( -5.00003, -7.00003 )
scale = Vector2( 3.34549, 3.33642 )
texture = ExtResource( 7 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 6 )
centered = false

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 5 )
centered = false

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Panel/VBoxContainer/Return" to="." method="_on_Return_pressed"]
